force-app/main/default/objects/tc9_pr__Employment_Cost__c/tc9_pr__Employment_Cost__c.object-meta.xml
<CustomObject>
    <description>Maintains costs associated with the Employment of Employees</description>
    <label>Employment Cost</label>
    <nameField>
        <label>Employment Cost Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employment Costs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>