force-app/main/default/objects/tc9_pr__Employment_Cost__c/fields/tc9_core__Assignment_Rate_Mapping__c.field-meta.xml
<CustomField>
    <fullName>tc9_core__Assignment_Rate_Mapping__c</fullName>
    <description>Specifies which Assignment Rate field the Employment Cost maps to during calculation, ensuring the cost is stored on the correct Assignment Rate record.</description>
    <inlineHelpText>Specifies which Assignment Rate field the Employment Cost maps to during calculation, ensuring the cost is stored on the correct Assignment Rate record.</inlineHelpText>
    <label>Assignment Rate Mapping</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_core__Assignment_Rate_Mapping</valueSetName>
    </valueSet>
</CustomField>