force-app/main/default/objects/tc9_pr__Employment_Cost__c/fields/tc9_et__Assignment_Handling__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Assignment_Handling__c</fullName>
    <description>When you choose &apos;Rolling,&apos; the system will generate Rate Calculator Lines for each Employment Cost Item found within the Effective and Expiry dates of the Rate Calculator. However, if you select &apos;Fixed,&apos; all Rate Calculator Lines will use the most recent Employment Cost Item created for this Employment Cost.</description>
    <inlineHelpText>When you choose &apos;Rolling,&apos; the system will generate Rate Calculator Lines for each Employment Cost Item found within the Effective and Expiry dates of the Rate Calculator. However, if you select &apos;Fixed,&apos; all Rate Calculator Lines will use the most recent Employment Cost Item created for this Employment Cost.</inlineHelpText>
    <label>Assignment Handling</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_et__Assignment_Handling_Picklists</valueSetName>
    </valueSet>
</CustomField>