force-app/main/default/objects/tc9_pr__Employment_Cost__c/fields/tc9_et__Has_Rate_Calc_Update_Pending__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Has_Rate_Calc_Update_Pending__c</fullName>
    <formula>if(isblank(tc9_et__Last_Date_Rate_Calc_Update_Required__c),False,
if(AND(ISBLANK(tc9_et__Last_Date_Rate_Calc_Update_Completed__c ), NOT(ISBLANK(tc9_et__Last_Date_Rate_Calc_Update_Required__c))),True,
if(tc9_et__Last_Date_Rate_Calc_Update_Completed__c &lt;= tc9_et__Last_Date_Rate_Calc_Update_Required__c,True,False)))</formula>
    <label>Has Rate Calc Update Pending</label>
    <type>Checkbox</type>
</CustomField>