force-app/main/default/objects/tc9_pr__Employment_Cost__c/fields/tc9_et__Rate_Calculator_Update_Pending__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Rate_Calculator_Update_Pending__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rate Calculator Update Pending</label>
    <type>Checkbox</type>
</CustomField>