force-app/main/default/objects/tc9_pr__Employment_Cost__c/fields/tc9_pr__Globally_Enabled__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Globally_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When set to True the Employment Cost will be available for all Clients to use. When set to False the Employment Cost will only be available when the cost has been associated to the Client.</description>
    <inlineHelpText>When set to True the Employment Cost will be available for all Clients to use. When set to False the Employment Cost will only be available when the cost has been associated to the Client.</inlineHelpText>
    <label>Globally Enabled</label>
    <type>Checkbox</type>
</CustomField>