force-app/main/default/objects/tc9_pr__Employment_Cost__c/fields/tc9_pr__Location__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Location__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Location associated with the Employment Cost. If a Parent Location is selected, the Employment Cost will apply to all the Locations child records</description>
    <inlineHelpText>The Location associated with the Employment Cost. If a Parent Location is selected, the Employment Cost will apply to all the Locations child records</inlineHelpText>
    <label>Location</label>
    <referenceTo>tc9_pr__Location__c</referenceTo>
    <relationshipLabel>Employment Costs</relationshipLabel>
    <relationshipName>Employment_Costs</relationshipName>
    <type>Lookup</type>
</CustomField>