force-app/main/default/objects/tc9_pr__Employment_Cost__c/recordTypes/tc9_et__Custom_Cost_3.recordType-meta.xml
<RecordType>
    <fullName>tc9_et__Custom_Cost_3</fullName>
    <active>true</active>
    <description>To be used for Employment Costs associated with Custom Cost 3</description>
    <label>Custom Cost 3</label>
</RecordType>