force-app/main/default/objects/tc9_pr__Employment_Cost__c/recordTypes/tc9_et__Custom_Post_Cost_1.recordType-meta.xml
<RecordType>
    <fullName>tc9_et__Custom_Post_Cost_1</fullName>
    <active>true</active>
    <description>To be used for Employment Costs associated with Custom Post Cost 1</description>
    <label>Custom Post Cost 1</label>
</RecordType>