force-app/main/default/objects/tc9_pr__Employment_Cost__c/recordTypes/tc9_et__Insurance.recordType-meta.xml
<RecordType>
    <fullName>tc9_et__Insurance</fullName>
    <active>true</active>
    <description>To be used for Employment Costs associated with Insurance</description>
    <label>Insurance</label>
</RecordType>