force-app/main/default/objects/tc9_pr__Employment_Cost__c/recordTypes/tc9_et__Superannuation.recordType-meta.xml
<RecordType>
    <fullName>tc9_et__Superannuation</fullName>
    <active>true</active>
    <description>To be used for Employment Costs associated with Superannuation</description>
    <label>Superannuation</label>
</RecordType>