force-app/main/default/objects/tc9_pr__Employment_Cost__c/recordTypes/tc9_et__WHS.recordType-meta.xml
<RecordType>
    <fullName>tc9_et__WHS</fullName>
    <active>true</active>
    <description>To be used for Employment Costs associated with WHS</description>
    <label>WHS</label>
</RecordType>