force-app/main/default/objects/tc9_pr__Employment_Cost__c/listViews/tc9_et__All.listView-meta.xml
<ListView>
    <fullName>tc9_et__All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>tc9_pr__Location__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>